# market-lens

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: quality-checks.yml
docs/: data-layer.md  metrics.md  rag-index.md
src/market_lens/: __init__.py  config.py
src/market_lens/collectors/: documents.py  download.py  fomc.py  prices.py
src/market_lens/llm/: base.py  cache.py  factory.py  retry.py
src/market_lens/measurement/: accuracy.py  calibration.py  event_study.py  frame.py  ic.py  lift.py  report.py
src/market_lens/outcomes/: compute.py  mid_price.py  returns.py
tests/: conftest.py  test_config.py  test_models.py  test_package_imports.py  test_storage.py
tests/collectors/: conftest.py  test_documents.py  test_download.py  test_fomc.py  test_prices.py
tests/e2e/: test_outcomes_pipeline.py  test_prediction_pipeline.py  test_rag_pipeline.py
tests/fixtures/: sample_config.yaml
tests/llm/: test_base.py  test_cache.py  test_factory.py  test_gemini.py  test_groq.py  test_model.py  test_openai.py  test_retry.py
tests/measurement/: test_accuracy.py  test_calibration.py  test_event_study.py  test_frame.py  test_ic.py  test_lift.py  test_report.py
tests/outcomes/: test_compute.py  test_mid_price.py  test_returns.py
tests/prediction/: test_generate.py  test_pipeline.py  test_prompt.py  test_schema.py
tests/rag/: conftest.py  test_chunking.py  test_embedder.py  test_indexing.py  test_qdrant.py  test_search.py
tests/replay/: test_documents.py  test_point_in_time.py  test_prices.py
tests/storage/: conftest.py  test_db.py  test_models.py
tests/utils/: test_time.py
(+23 files in other folders)
