[project]
name = "market_lens"
version = "0.1.0"
description = "Measurement instrument for LLM-based macro-event signal vs. FX price reaction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "histdata>=1.1",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
